RESOLVED FIXED117813
[Mac] Common crashes when playing media
https://bugs.webkit.org/show_bug.cgi?id=117813
Summary [Mac] Common crashes when playing media
Alexey Proskuryakov
Reported 2013-06-19 17:16:49 PDT
We're seeing AtomicString table corruption when playing media. Found a threading issue that causes this. <rdar://problem/13837412>
Attachments
proposed fix (1.58 KB, patch)
2013-06-19 17:18 PDT, Alexey Proskuryakov
eric.carlson: review+
eric.carlson: commit-queue+
Alexey Proskuryakov
Comment 1 2013-06-19 17:18:31 PDT
Created attachment 205043 [details] proposed fix
Alexey Proskuryakov
Comment 2 2013-06-19 19:18:47 PDT
Commit queue is not feeling well, committed manually in <http://trac.webkit.org/changeset/151762>.
Note You need to log in before you can comment on or make changes to this bug.