        [Mac] Common crashes when playing media         https://bugs.webkit.org/show_bug.cgi?id=117813         <rdar://problem/13837412>

Reviewed by Eric Carlson.

        * platform/graphics/avfoundation/objc/MediaPlayerPrivateAVFoundationObjC.mm:
        (-[WebCoreAVFLoaderDelegate resourceLoader:didCancelLoadingRequest:]):
        This method may be called from a secondary thread, but it does things that are
        not thread safe.



Canonical link: https://commits.webkit.org/135949@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@151762 268f45cc-cd09-0410-ab3c-d52691b4dbfc